--- a/SupraSonicWin/MainWindow.xaml
+++ b/SupraSonicWin/MainWindow.xaml
@@ -3,11 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SupraSonicWin"
-    Title="SupraSonic Settings">
+    Title="SupraSonic Windows">
 
-    <StackPanel Padding="40" Spacing="20" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="SupraSonic Windows" FontSize="28" FontWeight="Bold"/>
-        <TextBlock Text="The app is running in the background. Hold F12 to record." Foreground="Gray"/>
-        <Button Content="Exit App" Click="OnExitClick" HorizontalAlignment="Center"/>
-    </StackPanel>
+    <NavigationView x:Name="NavView" SelectionChanged="OnNavSelectionChanged" IsBackButtonVisible="Collapsed">
+        <NavigationView.MenuItems>
+            <NavigationViewItem Content="Settings" Icon="Setting" Tag="settings"/>
+            <NavigationViewItem Content="History" Icon="History" Tag="history"/>
+        </NavigationView.MenuItems>
+
+        <Frame x:Name="ContentFrame"/>
+    </NavigationView>
 </Window>
